# agent-diagnosis-spec

./: .gitignore  LICENSE  PHASE_1_DISCOVERY.md  README.md  ROADMAP.md  conftest.py  pyproject.toml
examples/v0.2/: failing-eval-single.json  full-failing-eval-container.json  minimal-failing-eval-container.json
scripts/: validate_v0.2.py
spec/v0.1/: SPEC.md  finding.schema.json
spec/v0.2/: SPEC-v0.2-ADDENDUM.md  failing-eval-container.schema.json  failing-eval.schema.json  structured-edit.schema.json
src/agent_diagnosis_spec/: __init__.py  conformance.py  parser.py  schemas.py  validators.py
tests/: test_canonical_examples.py  test_conformance.py  test_v0_2_conformance.py  test_validators.py
tests/fixtures/: canonical_finding.json  non_compliant_applyable_false_no_reason.json  non_compliant_applyable_true_no_edits.json  non_compliant_bad_id.json  non_compliant_empty_evidence.json  non_compliant_evidence_missing_field.json  non_compliant_layer_out_of_range.json  non_compliant_missing_claim.json  non_compliant_unknown_evidence_type.json
